# cloud-custodian

./: .azure-pipelines.yml  .codecov.yml  .coverage.Barbaras-MacBook-Pro.local.49553.XQPTiMhx  .drone.sec  .drone.yml  .git-blame-ignore-revs  .gitignore  .travis.yml  404.html  ADOPTERS.md  CHANGELOG.md  CNAME  CreateUniversalTagTestFiles.py  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  README.rst  UPGRADE_PROCEDURE.md  azure-pipelines.yml  azure.aro.yml  build-and-push.sh  c:UsersRoy.SpragueWorkspacescloud.custodiansubscriptionssubscriptions.yml  events.html  images.hcl  index.html  mkdocs.yml  output.txt  poetry.lock   policies.yml  policy.yaml  policy.yml  pyproject.toml  pyvenv.cfg  quicksight_custom_permissions.py  ratchet.py  ratchet.txt  requirements-dev.txt  requirements-docs.txt  (+7 more)
.azure-pipelines/: azure-nightly-tests.yml  cask-release.yml  docker-wrapper.yml  live-functional.yml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  labeler.yml
assets/: home.css
c7n/: __init__.py  actions.py  cache.py  cli.py  commands.py  config.py  credentials.py  ctx.py  cwe.py  data.py  deprecated.py  element.py  exceptions.py  executor.py  filters.py  handler.py  iam.py  iamaccess.py  invocable.py  loader.py  log.py  logs_support.py  manager.py  metrics.py  mu.py  offhours.py  output.py  policy.py  provider.py  query.py  registry.py  resolver.py  schema.py  sqsexec.py  statsd.py  structure.py  tags.py  testing.py  utils.py  varfmt.py  (+1 more)
calendar/: index.html
community/: index.html
css/: landing-page.css
docker/: c7n  c7n-distroless  c7n-kube  c7n-kube-distroless  c7n-left  c7n-oci  c7n-org  c7n-org-distroless  cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
docs/: Makefile.sphinx  actions.html  contribute.html  deployment.html  filters.html  genindex.html  index.html  johns-unofficial-dummys-guide.md  objects.inv  py-modindex.html  (+2 more)
tools/c7n_awscc/: build.py  pyproject.toml  requirements.txt  setup.py
tools/c7n_awscc/c7n_awscc/: actions.py  entry.py  hook.py  manager.py  meta.py  mu.py  policy.py  provider.py  query.py
tools/c7n_awscc/c7n_awscc/data/: aws_accessanalyzer_analyzer.json  aws_amplify_app.json  aws_amplify_branch.json  aws_amplifyuibuilder_component.json  aws_amplifyuibuilder_form.json  aws_amplifyuibuilder_theme.json  aws_apigateway_authorizer.json  aws_apigateway_basepathmapping.json  aws_apigateway_deployment.json  aws_apigateway_documentationpart.json  aws_apigateway_documentationversion.json  aws_apigateway_method.json  aws_apigateway_model.json  aws_apigateway_requestvalidator.json  aws_apigateway_resource.json  aws_apigateway_restapi.json  aws_apigateway_stage.json  aws_apigateway_usageplan.json  aws_apigateway_vpclink.json  aws_apigatewayv2_api.json  aws_apigatewayv2_apimapping.json  aws_apigatewayv2_authorizer.json  aws_apigatewayv2_deployment.json  aws_apigatewayv2_integrationresponse.json  aws_apigatewayv2_model.json  aws_apigatewayv2_route.json  aws_apigatewayv2_routeresponse.json  aws_appconfig_extension.json  aws_appconfig_extensionassociation.json  aws_appflow_connector.json  aws_appflow_connectorprofile.json  aws_appflow_flow.json  aws_appintegrations_dataintegration.json  aws_appintegrations_eventintegration.json  aws_applicationautoscaling_scalabletarget.json  aws_applicationinsights_application.json  aws_apprunner_service.json  aws_apprunner_vpcingressconnection.json  aws_appstream_appblockbuilder.json  aws_appstream_application.json  (+452 more)
tools/c7n_awscc/c7n_awscc/resources/: emr_serverless_jobs.py
tools/c7n_awscc/scripts/: schemas.py
tools/c7n_awscc/tests/: conftest.py  test_action.py  test_ccmanager.py  test_emr_serverless_jobs.py  test_hook.py  test_manager.py  zpill.py
tools/c7n_mailer/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
tools/c7n_mailer/c7n_mailer/: address.py  azure_queue_processor.py  cli.py  datadog_delivery.py  deploy.py  email_delivery.py  handle.py  ldap_lookup.py  processor.py  record.py  replay.py  sendgrid_delivery.py  slack_delivery.py  sns_delivery.py  splunk_delivery.py  sqs_message_processor.py  sqs_queue_processor.py  target.py  utils.py  utils_email.py  worker.py
tools/c7n_mailer/c7n_mailer/azure/: deploy.py  handle.py  sendgrid_delivery.py
tools/c7n_mailer/c7n_mailer/azure_mailer/: azure_queue_processor.py  deploy.py  handle.py  sendgrid_delivery.py  utils.py
tools/c7n_mailer/c7n_mailer/gcp/: gcp_pubsub_processor.py
tools/c7n_mailer/c7n_mailer/gcp_mailer/: gcp_queue_processor.py  utils.py
tools/c7n_mailer/c7n_mailer/msg-templates/: default.html.j2  iam_custodian.html.j2  my_custodian.html.j2  slack_default.j2
tools/c7n_mailer/msg-templates/: slack-default.j2
tools/c7n_mailer/tests/: common.py  escape.html.j2  test_azure.py  test_azure_mailer_utils.py  test_datadog.py  test_email.py  test_gcp.py  test_gcp_mailer_utils.py  test_ldap.py  test_misc.py  test_replay.py  test_schema.py  test_slack.py  test_smtp_delivery.py  test_sns.py  test_splunk.py  test_utils.py
tools/c7n_org/: Dockerfile  README.md  azuresubs.py  pyproject.toml  setup.py
tools/c7n_org/c7n_org/: cli.py  utils.py
tools/c7n_org/scripts/: azuresubs.py  orgaccounts.py
tools/c7n_org/tests/: test_org.py
tools/c7n_tencentcloud/: pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_tencentcloud/c7n_tencentcloud/: client.py  provider.py  query.py
tools/c7n_tencentcloud/c7n_tencentcloud/actions/: tags.py
tools/c7n_tencentcloud/c7n_tencentcloud/filters/: metrics.py
tools/c7n_tencentcloud/c7n_tencentcloud/resources/: ami.py  cam.py  cbs.py  cbs_snapshot.py  clb.py  cls.py  cos.py  cvm.py  dns_record.py  eip.py  elasticsearch.py  mysql.py  mysql_backup.py  nat_gateway.py  security_group.py  tcr.py  vpc.py
tools/c7n_tencentcloud/tests/: conftest.py  test_filter_metrics.py  test_tc_cam.py  test_tc_cbs.py  test_tc_client.py  test_tc_cls.py  test_tc_cvm.py  test_tc_provider.py  test_tc_security_group.py  test_tc_tags.py
tools/c7n_tencentcloud/tests/data/: credentials
workspace/: pyproject.toml
(+9340 files in other folders)
