[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "cryptography>=44",
    "boto3<2.0.0,>=1.12.31",
    "jsonschema>=4.18",
    "argcomplete>=1.12.3",
    "python-dateutil<3.0.0,>=2.8.2",
    "pyyaml>=5.4.0",
    "tabulate<1.0.0,>=0.9.0",
    "docutils<0.19,>=0.18",
    "urllib3<1.27,>=1.25.4",
    "setuptools<79",
]
name = "c7n"
version = "0.9.44"
description = "Cloud Custodian - Policy Rules Engine"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs"

[project.scripts]
custodian = "c7n.cli:main"

[dependency-groups]
dev = [
    "ruff~=0.11",
    "docker[websockets]<8.0.0,>=7.1.0",
    "black<25.0,>=23.1",
    "pytest<8",
    "coverage<8,>=7",
    "placebo<1,>=0",
    "pytest-xdist<4.0,>=3.0",
    "pytest-cov<6,>=3",
    "pytest-terraform<0.8,>=0.6",
    "vcrpy>=4.0.2",
    "twine<6.0.0,>=3.1.1",
    "pytest-sugar<1.1.0,>=0.9.2",
    "click<9.0,>=8.0",
    "freezegun<2.0.0,>=1.2.2",
    "pytest-recording<0.14.0,>=0.12.1",
    "moto<6.0,>=5.0",
    "openapi-spec-validator<1.0.0,>=0.7.1",
]
addons = [
    "aws-xray-sdk<3.0,>=2.14",
    "jsonpatch<2.0,>=1.25",
    "psutil>=5.7",
]

[tool.uv.sources]
c7n = { workspace = true }

[tool.uv.workspace]
members = [
  "tools/c7n_azure",
  "tools/c7n_gcp",
  "tools/c7n_kube",
  "tools/c7n_mailer",
  "tools/c7n_org",
  "tools/c7n_policystream",
  "tools/c7n_tencentcloud"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["__init__.py"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
preview = true
select = ["E", "F", "W"]
# E741 - single char variables
# E401 - multiple imports in a single line
ignore = ["E741", "E401"]

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "--tb=native"
markers = ["functional", "skiplive", "audited"]
python_files = "test_*.py"
norecursedirs = ["data", "cassettes", "templates", "terraform"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
