[tool.uv]
package = false

[project]
name = "custodian-workspace"
version = "1.0"
requires-python = ">=3.9.2"
dependencies = [
  "c7n[dev,addons]",
  "c7n_azure",
  "c7n_gcp",
  "c7n_kube",
  "c7n_left",
  "c7n_mailer",
  "c7n_oci",
  "c7n_openstack",
  "c7n_org",
  "c7n_policystream",
  "c7n_sphinxext",
  "c7n_tencentcloud"
]

[tool.uv.sources]
c7n_azure = { workspace = true }
c7n_gcp = { workspace = true }
c7n_kube = { workspace = true }
c7n_left = { workspace = true }
c7n_mailer = { workspace = true }
c7n_oci = { workspace = true }
c7n_openstack = { workspace = true }
c7n_org = { workspace = true }
c7n_policystream = { workspace = true }
c7n_sphinxext = { workspace = true }
c7n_tencentcloud = { workspace = true }
