[tool.poetry]
name = "c7n_awscc"
version = "0.1.0"
readme = "readme.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
description = "Cloud Custodian - AWS Cloud Control Provider"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"

classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]


[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0"

[tool.poetry.dev-dependencies]
c7n = {path = "../..", develop = true}

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
